# androidOpen

./: .gitignore  build.gradle  config.gradle  gradle.properties  settings.gradle
activitystack/: build.gradle
activitystack/src/main/: AndroidManifest.xml
androidEvent/: build.gradle
androidEvent/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
compound/: build.gradle  proguard-rules.pro
compound/src/main/: AndroidManifest.xml
download/: build.gradle  proguard-rules.pro
gradle/wrapper/: gradle-wrapper.properties
gtdemo/: build.gradle
heaptest/: build.gradle
hook/: build.gradle
inject/: build.gradle
joylockscreen/: build.gradle
lib/: build.gradle
libinject/: build.gradle
libjava/: smaps  smaps.map  smaps_mi6.txt  tmp.txt  tmpMap.txt
libjava/map/: maps  maps.tmp  smaps
opengl/: build.gradle
pay/: build.gradle
pay/libs/: player.aar  ttvideoengine.aar
recycler/: build.gradle
sharedemo/: build.gradle
test/: Camry.debug  build.gradle  proguard-rules.pro
testinstrument/: build.gradle
testndk/: build.gradle
testndk/jni/: Android.mk  Application.mk  com_flying_testndk_MainActivity.c
testndk/jni/elfhook/: Nodes.h  (+6 more)
testndk/jni/one/: CMakeLists.txt  com_flying_testndk_TestAnotherLib.cpp
testndk2/: build.gradle
testndk2/jni/: Android.mk  application.mk  com_flying_testndk2_jni_TestJni.c  com_flying_testndk2_jni_TestJni.h
testrecycler/: build.gradle
teststatus/: build.gradle
update/: build.gradle
video/: build.gradle
(+468 files in other folders)
